<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/examTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/examTitle"
        android:textSize="20sp" />

        <TextView
            android:id="@+id/questionQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/questionQuestion" />

        <TextView
        android:id="@+id/questionAnswerA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/questionAnswerA" />
        <TextView
        android:id="@+id/questionAnswerB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/questionAnswerB" />
        <TextView
        android:id="@+id/questionAnswerC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/questionAnswerC" />
        <TextView
        android:id="@+id/questionAnswerD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/questionAnswerD" />
        <TextView
        android:id="@+id/questionCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/questionCorrectAnswer" />
 
 
</LinearLayout>
