<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/activityMainLayout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <CheckBox
                android:layout_width="124dp"
                android:layout_height="fill_parent"
                android:text="Click here to pull web data"
                android:id="@+id/checkboxWeb" android:layout_gravity="left|center_vertical" android:checked="false"
                android:onClick="webCheckBoxOnClick"/>
        <TextView
                android:id="@+id/homeScreenTextView1"
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:focusable="false"
                android:text="@string/homeScreenText1" android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="32dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Button
                android:id="@+id/buttonAddExam"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/homeScreenReviewButton"
                android:onClick="buttonAddExamOnClick"/>

        <Button
                android:id="@+id/buttonSelectExam"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/homeScreenExamButton"
                android:onClick="buttonSelectExamOnClick"/>
        <Button
                android:id="@+id/buttonCopyToWeb"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/copyToWebButton"
                android:onClick="buttonCopyToWebOnClick"/>

        <Button
                android:id="@+id/buttonShowQuestions"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:onClick="buttonShowQuestionsOnClick"
                android:text="@string/homeScreenQuestionButton"/>
        <Button
                android:id="@+id/buttonDeleteDatabase"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/homeScreenEditButton"
                android:onClick="buttonDeleteDatabaseOnClick"/>

    </LinearLayout>
</LinearLayout>