<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:showDividers="end"
    android:weightSum="100"
    tools:context=".ShowQuestionsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10" >
<!--  
        <TextView
            android:id="@+id/reviewSection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/questionSection" />
-->
    </LinearLayout>

    <TextView
        android:id="@+id/reviewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:clickable="false"
        android:fadingEdge="horizontal"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:text="@string/questionQuestion"
        android:textSize="16sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TextView
        android:id="@+id/reviewAnswerA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/questionAnswerA"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/reviewAnswerB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/questionAnswerB"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/reviewAnswerC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/questionAnswerC"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/reviewAnswerD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/questionAnswerD"
        android:textSize="12sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />

</LinearLayout>