<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/results_listview_TV0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_exam_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/results_listview_TV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/results_Lable"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/results_listview_TV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/results_listview_TV1"
            android:text="@string/results"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <ListView
        android:id="@+id/results_listview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/review_listview" >
    </ListView>

</LinearLayout>