<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/splashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="false"
        android:fitsSystemWindows="true"
        android:longClickable="true"
        android:scrollbars="vertical"
        android:text="@string/splash"
        android:textAlignment="center" />

    <Button
        android:id="@+id/splashExitButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/splashTextView"
        android:layout_alignTop="@+id/splashOkayButton"
        android:layout_marginRight="70dp"
        android:onClick="exitApp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/splashOkayButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="19dp"
        android:layout_toLeftOf="@+id/splashExitButton"
        android:onClick="setActivityMainLayout"
        android:text="@string/okay" />

</RelativeLayout>